Closed Bug 1723972 Opened 3 years ago Closed 3 years ago

[fission] Fission breaks acid2

Categories

(Core :: DOM: Content Processes, defect)

defect

Tracking

()

RESOLVED FIXED
92 Branch
Fission Milestone MVP
Tracking Status
firefox-esr78 --- disabled
firefox-esr91 --- disabled
firefox90 --- disabled
firefox91 --- disabled
firefox92 --- fixed

People

(Reporter: emilio, Assigned: emilio)

Details

(Whiteboard: fission-soft-blocker, [wptsync upstream])

Attachments

(1 file)

STR: Go to http://acid2.acidtests.org/#top

ER: Same rendering as with fission disabled.

AR: A scrollbar and white content is there rather than the eyes.

Flags: needinfo?(emilio)

Tentatively assigning to Emilio because he is investigating.

Assignee: nobody → emilio
Fission Milestone: --- → MVP
Whiteboard: fission-soft-blocker

Do we run that test with Fission+non-webrender/swgl?

Pushed by ealvarez@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/dd9db6a31aed Don't process-switch for object/embed loads if we're falling back due to an error page. r=nika
Created web-platform-tests PR https://github.com/web-platform-tests/wpt/pull/29895 for changes under testing/web-platform/tests
Whiteboard: fission-soft-blocker → fission-soft-blocker, [wptsync upstream]
Flags: needinfo?(emilio)
Status: NEW → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 92 Branch
Upstream PR merged by moz-wptsync-bot
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: