Bug 1723972 - Don't process-switch for object/embed loads if we're falling back due to an error page. r=nika

Differential Revision: https://phabricator.services.mozilla.com/D121734